--- a/coc-settings.json
+++ b/coc-settings.json
@@ -10,8 +10,7 @@
   ],
   "tailwindCSS.headwind.runOnSave": true,
   "diagnostic.virtualText": true,
-  "diagnostic.virtualTextCurrentLineOnly": false,
-  "diagnostic.virtualTextAlign": "below"
+  "diagnostic.virtualTextCurrentLineOnly": false
 }
 
 /* coc-css coc-htmlhint coc-json coc-rome coc-tsserver coc-cssmodules coc-diagnostic coc-emmet coc-git coc-highlight coc-html */
