--- a/coc-settings.json
+++ b/coc-settings.json
@@ -9,5 +9,6 @@
     "javascriptreact"
   ],
   "tailwindCSS.headwind.runOnSave": true,
+  // "diagnostic.virtualText": true,
   "diagnostic.virtualTextCurrentLineOnly": false
 }
