--- a/coc-settings.json
+++ b/coc-settings.json
@@ -9,6 +9,6 @@
     "javascriptreact"
   ],
   "tailwindCSS.headwind.runOnSave": true,
-  // "diagnostic.virtualText": true,
+  "diagnostic.virtualText": true,
   "diagnostic.virtualTextCurrentLineOnly": false
 }
