--- a/coc-settings.json
+++ b/coc-settings.json
@@ -8,7 +8,5 @@
     "javascript",
     "javascriptreact"
   ],
-  "tailwindCSS.headwind.runOnSave": true,
-  "diagnostic.virtualText": true,
-  "diagnostic.virtualTextCurrentLineOnly": false
+  "tailwindCSS.headwind.runOnSave": true
 }
