--- a/coc-settings.json
+++ b/coc-settings.json
@@ -8,7 +8,8 @@
     "javascript",
     "javascriptreact"
   ],
-  "tailwindCSS.headwind.runOnSave": true
+  "tailwindCSS.headwind.runOnSave": true,
+  "tsserver.locale": "es"
   // "eslint.run": "onSave",
   // "eslint.format.enable": true,
   // "eslint.autoFixOnSave": true
