--- a/coc-settings.json
+++ b/coc-settings.json
@@ -1,21 +1,27 @@
 {
-  "coc.preferences.formatOnSaveFiletypes": ["*"],
-  "html.filetypes": [
-    "html",
-    "handlebars",
-    "htmldjango",
-    "blade",
-    "javascript",
-    "javascriptreact"
+  "coc.preferences.formatOnSaveFiletypes": [
+    "*"
   ],
-  "tsserver.locale": "es",
+  // "html.filetypes": [
+  //   "html",
+  //   "handlebars",
+  //   "htmldjango",
+  //   "blade",
+  //   "javascript",
+  //   "javascriptreact"
+  // ],
+  "prettier.enable": false,
   "eslint.alwaysShowStatus": true,
-  "eslint.format.enable": true,
-  "eslint.probe": [
-    "typescriptreact",
-    "javascriptreact",
-    "typescript",
-    "javascript",
-    "html"
-  ]
+  "eslint.autoFixOnSave": true,
+  "eslint.options": {
+    "overrideConfigFile": ".eslintrc.js"
+  },
+  // "eslint.probe": [
+  //   "typescriptreact",
+  //   "javascriptreact",
+  //   "typescript",
+  //   "javascript",
+  //   "html"
+  // ],
+  "tsserver.locale": "es"
 }
